# map_server

./: .env  .gitignore  CHANGES.txt  README.md  buildout.cfg  docker-compose.yml  pyproject.toml  setup.py
config/: app.ini  development.ini  map.json  mp_aerials_prod.ini  tile.json
geoserver/: README.md  start.ini
geoserver/data/: README.rst  global.xml
geoserver/data/styles/osm/color/: boundary.css  buildings.css  county.css  district.css  forestpark.css  lakes.css  minor_roads.css  motorway.css  pedestrian.css  roads.css  settlements.css  subdistrict.css  trunk_primary.css  water.css  waterway.css
geoserver/data/styles/osm/gray/: amenity.css  boundary.css  buildings.css  country.css  county.css  forestpark.css  lakes.css  minor_roads.css  motorway.css  pedestrian.css  roads.css  settlements.css  subdistrict.css  trunk_primary.css  water.css  waterway.css
geoserver/data/styles/ott/: routes.css  stops.css
geoserver/data/workspaces/: default.xml
geoserver/data/workspaces/osm/: namespace.xml  workspace.xml
ott/map_server/: gen_route_labels.py
ott/map_server/geoserver_config/: base.py  jetty_config.py  osm_config.py  style_config.py  transit_config.py
ott/map_server/geoserver_config/templates/: feature_type.mustache  layer.mustache  layer_group.mustache  stop_popup.mustache  stores.mustache  style_config.mustache  template.py
ott/map_server/map_ui/: tm_aerials_leaflet.html
ott/map_server/static_maps/: map_image.py  stop_image.py
scripts/: base.sh  download_clean_data_dir.sh  install_geoserver.sh  mk_data_dir.sh  run_geoserver.sh
