virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "map_server"
version = "0.0.1"
description = "geoserver data_dir generation in support of gtfsdb transit layers"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/map_server"}]

[tool.poetry.dependencies]
python = "^3.6"
pystache = "*"

"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}
#convert = {git = "https://github.com/OpenTransitTools/convert.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
gtfs_feeds = "ott.convert.csv2json.gtfs:gtfs_feed_parser"
generate-geoserver-config = "ott.map_server.geoserver_config.transit_config:generate_geoserver_config"
get-agencies = "ott.map_server.geoserver_config.transit_config:get_agency_list"
